force-app/main/default/objects/AIAgentDataSource__c/AIAgentDataSource__c.object-meta.xml
<CustomObject>
    <description>Junction object assigning Data Sources to Agents, allowing one data source to be reused across multiple agents and one agent to draw from multiple data sources, each independently toggleable without needing to remove or edit the underlying Data Source or Agent record.</description>
    <label>AI Agent Data Source</label>
    <nameField>
        <displayFormat>Agent Data Source - {0000}</displayFormat>
        <label>AI Agent Data Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Agent Data Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>