force-app/main/default/objects/AIAgentDataSource__c/fields/AIAgent__c.field-meta.xml
<CustomField>
    <fullName>AIAgent__c</fullName>
    <description>The Agent this data source is assigned to.</description>
    <inlineHelpText>This assignment is deleted automatically if the Agent is deleted.</inlineHelpText>
    <label>AI Agent</label>
    <referenceTo>AIAgent__c</referenceTo>
    <relationshipLabel>AI Agent Data Sources</relationshipLabel>
    <relationshipName>AIAgentDataSources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>