force-app/main/default/objects/AIAgentDataSource__c/fields/AIDataSource__c.field-meta.xml
<CustomField>
    <fullName>AIDataSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Data Source being assigned to this Agent.</description>
    <inlineHelpText>Select the data source this Agent should be able to call.</inlineHelpText>
    <label>AI Data Source</label>
    <referenceTo>AIDataSource__c</referenceTo>
    <relationshipLabel>AI Agent Data Sources</relationshipLabel>
    <relationshipName>AIAgentDataSources</relationshipName>
    <type>Lookup</type>
</CustomField>