force-app/main/default/objects/AIAgentDataSource__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this data source is currently active for this Agent, without needing to remove the assignment entirely.</description>
    <inlineHelpText>Turn this off to temporarily disable this data source for this Agent without deleting the assignment.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>